# kirikiri

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-multiplatform.yml
src/: main.rs
