[package]
name = "kirikiri"
version = "0.1.0"
edition = "2024"

[dependencies]
fast-socks5 = "1.0.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
structopt = "0.3"
axum = "0.8.8"
tower = "0.5.3"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }