[package]
name = "kirikiri"
version = "0.1.1"
edition = "2024"

[dependencies]
fast-socks5 = "1.0.0"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
tracing = "0.1.44"
structopt = "0.3.26"
tracing-subscriber = { version="0.3.23", features = ["env-filter"] }

[[bin]]
name = "kirikiri"
path = "src/main.rs"
