[package]
name = "kirikiri"
version = "0.1.3"
edition = "2024"

[dependencies]
fast-socks5 = "1.0.0"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
tracing = "0.1.44"
structopt = "0.3.26"
tracing-subscriber = { version="0.3.23", features = ["env-filter"] }

[[bin]]
name = "kirikiri"
path = "src/main.rs"

# while desktop aarch64 usually uses 4k page size, apple silicon needs 16k and some weirder systems need 64k
# by setting the page size to 64k all of these systems work with the same binary
[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-zmax-page-size=65536"]